[package]
name = "bits128"
version = "0.1.3"
license = "MIT/Apache-2.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/bits128"
readme = "README.md"
edition = "2018"
description = "A struct to iterate over 128 bits by taking only 128 bits"

[dependencies]
